<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao.."
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:text="############"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faixaprecovitrine"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtFaixaPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="#### - ####"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/criadaEm"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtDataCriacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="##/##/####"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="###, ###, ###, ######"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/links"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginBottom="10dp"
            android:text="#############, ###########, ###########"
            android:textSize="14sp" />


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>