<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/TxtTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:text="freela"
        android:textColor="@color/colorAccent"
        android:textSize="80dp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#8F8F8F"
                android:gravity="center"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="#8F8F8F" />

            <EditText
                android:id="@+id/etSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#8F8F8F"
                android:gravity="center"
                android:hint="@string/senha"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="#8F8F8F" />

        </LinearLayout>

        <TextView
            android:id="@+id/esqueciSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:clickable="true"
            android:text="@string/esqueciSenha"
            android:textColor="#8F8F8F"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn"
            android:elevation="2dp"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="#212121"
            android:textSize="18sp" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_cadastro"
        android:layout_below="@+id/linear_login">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/linear_cadastro"
        android:layout_width="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:clickable="true"
            android:text="@string/aindanaotemconta"
            android:textColor="#8F8F8F"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnCadastrese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:clickable="true"
            android:text="@string/crieumaagora"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>