<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="1dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewCapa"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_back_4runner"
            android:transitionName="capaVitrine" />

        <TextView
            android:id="@+id/txtNomeVitrine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="NomeVitrine"
            android:textSize="20dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtDistancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:text="A XX Km"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/categoriaVitrine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="06dp"
                android:text="@string/categoria"
                android:textSize="16dp" />

            TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="06dp"
            android:text=" - "
            android:textSize="16dp" />

            TextView
            android:id="@+id/subcategoriaVitrine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="06dp"
            android:layout_marginTop="06dp"
            android:text="@string/subcategoria"
            android:textSize="16dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:gravity="right"
                android:text="@string/anunciadaEm"
                android:textSize="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text=":"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/dtCriacaoVitrine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="06dp"
                android:text="xx/xx/xxxx"
                android:textSize="16dp" />

        </LinearLayout>


        <LinearLayout

            android:id="@+id/layVitrine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:gravity="left"
            android:visibility="gone">

            <Button
                android:id="@+id/btnVerMais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="Ver vitrine"
                android:textColor="#ffffff"

                />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
